Added xcode formatting, new article
Added xcode formatting CSS from Pygments. New Git Revision Info article
added.

--- a/categories.html
+++ b/categories.html
@@ -8,6 +8,7 @@
 
     <title>Paul Calnan's Blog - Categories</title>
     <link rel="stylesheet" href="./theme/css/main.css">
+    <link rel="stylesheet" href="./theme/css/xcode.css">
 
   </head>
 
@@ -31,7 +32,7 @@
 
     <h1>Categories on Paul Calnan's Blog</h1>
     <ul>
-        <li><a href="./category/misc.html">misc</a> (3)</li>
+        <li><a href="./category/misc.html">misc</a> (4)</li>
     </ul>
 
       <div id="copyright">
