--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
 
     <title>Paul Calnan's Blog: About</title>
     <link rel="stylesheet" href="../theme/css/main.css">
+    <link rel="stylesheet" href="../theme/css/xcode.css">
 
   </head>
 
