--- a/authors.html
+++ b/authors.html
@@ -8,6 +8,7 @@
 
     <title>Paul Calnan's Blog - Authors</title>
     <link rel="stylesheet" href="./theme/css/main.css">
+    <link rel="stylesheet" href="./theme/css/xcode.css">
 
   </head>
 
@@ -31,7 +32,7 @@
 
     <h1>Authors on Paul Calnan's Blog</h1>
     <ul>
-        <li><a href="./author/paul-calnan.html">Paul Calnan</a> (3)</li>
+        <li><a href="./author/paul-calnan.html">Paul Calnan</a> (4)</li>
     </ul>
 
       <div id="copyright">
