--- a/tags.html
+++ b/tags.html
@@ -8,6 +8,7 @@
 
     <title>Paul Calnan's Blog - Tags</title>
     <link rel="stylesheet" href="./theme/css/main.css">
+    <link rel="stylesheet" href="./theme/css/xcode.css">
 
   </head>
 
