Euler's identity article

--- a/tags.html
+++ b/tags.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./theme/css/main.css">
     <link rel="stylesheet" href="./theme/css/xcode.css">
 
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
   </head>
 
   <body>
@@ -36,6 +38,7 @@
         <li><a href="./tag/general.html">General</a> (2)</li>
         <li><a href="./tag/git.html">Git</a> (2)</li>
         <li><a href="./tag/json.html">JSON</a> (1)</li>
+        <li><a href="./tag/math.html">Math</a> (1)</li>
         <li><a href="./tag/shell.html">Shell</a> (1)</li>
         <li><a href="./tag/swift.html">Swift</a> (3)</li>
     </ul>
