Adding "Requiring Optionals" and Mastodon header link

--- a/tags.html
+++ b/tags.html
@@ -28,7 +28,8 @@
 <a href="./archives.html">Archives</a> |
 <a href="./tags.html">Tags</a> |
 <a href="./pages/about.html">About</a> |
-<a href="https://github.com/pwc3/">Github</a>            </td>
+<a href="https://github.com/pwc3/">Github</a> |
+<a href="https://mastodon.social/@pwc3">Mastodon</a>            </td>
           </tr>
         </table>
       </div>
@@ -40,7 +41,7 @@
         <li><a href="./tag/json.html">JSON</a> (1)</li>
         <li><a href="./tag/math.html">Math</a> (2)</li>
         <li><a href="./tag/shell.html">Shell</a> (1)</li>
-        <li><a href="./tag/swift.html">Swift</a> (3)</li>
+        <li><a href="./tag/swift.html">Swift</a> (4)</li>
     </ul>
 
       <div id="copyright">
@@ -48,8 +49,9 @@
 <a href="./archives.html">Archives</a> |
 <a href="./tags.html">Tags</a> |
 <a href="./pages/about.html">About</a> |
-<a href="https://github.com/pwc3/">Github</a>          <br/><br/>
-          &copy; 2012-2020 Paul Calnan. All rights reserved.
+<a href="https://github.com/pwc3/">Github</a> |
+<a href="https://mastodon.social/@pwc3">Mastodon</a>          <br/><br/>
+          &copy; 2012-2023 Paul Calnan. All rights reserved.
         </center>
       </div>
     </div>
