--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,8 @@
 <a href="../archives.html">Archives</a> |
 <a href="../tags.html">Tags</a> |
 <a href="../pages/about.html">About</a> |
-<a href="https://github.com/pwc3/">Github</a>            </td>
+<a href="https://github.com/pwc3/">Github</a> |
+<a href="https://mastodon.social/@pwc3">Mastodon</a>            </td>
           </tr>
         </table>
       </div>
@@ -46,8 +47,9 @@
 <a href="../archives.html">Archives</a> |
 <a href="../tags.html">Tags</a> |
 <a href="../pages/about.html">About</a> |
-<a href="https://github.com/pwc3/">Github</a>          <br/><br/>
-          &copy; 2012-2020 Paul Calnan. All rights reserved.
+<a href="https://github.com/pwc3/">Github</a> |
+<a href="https://mastodon.social/@pwc3">Mastodon</a>          <br/><br/>
+          &copy; 2012-2023 Paul Calnan. All rights reserved.
         </center>
       </div>
     </div>
