Updated Mastodon link for verification

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
     <title>Paul Calnan's Blog: About</title>
     <link rel="stylesheet" href="../theme/css/main.css">
     <link rel="stylesheet" href="../theme/css/xcode.css">
+    <link href="https://mastodon.social/@pwc3" rel="me">
 
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
@@ -29,7 +30,7 @@
 <a href="../tags.html">Tags</a> |
 <a href="../pages/about.html">About</a> |
 <a href="https://github.com/pwc3/">Github</a> |
-<a href="https://mastodon.social/@pwc3">Mastodon</a>            </td>
+<a href="https://mastodon.social/@pwc3" rel="me">Mastodon</a>            </td>
           </tr>
         </table>
       </div>
@@ -48,7 +49,7 @@
 <a href="../tags.html">Tags</a> |
 <a href="../pages/about.html">About</a> |
 <a href="https://github.com/pwc3/">Github</a> |
-<a href="https://mastodon.social/@pwc3">Mastodon</a>          <br/><br/>
+<a href="https://mastodon.social/@pwc3" rel="me">Mastodon</a>          <br/><br/>
           &copy; 2012-2023 Paul Calnan. All rights reserved.
         </center>
       </div>
